--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "release": "vite --mode=production --host"
   },
   "dependencies": {
+    "dat.gui": "^0.7.9",
     "three": "^0.154.0",
     "vue": "^3.3.4"
   },
